# cimarron

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  notizen.md
Dokumentation/: cimarron-documentation.tex
Dokumentation/.TEX/: header.tex
Dokumentation/images/: lmu-siegel.eps
Dokumentation/includes/: camshift-system-diagram.tex  concepts.tex  frameworkevaluation.tex  full-system-diagram.tex  planing-system-diagram.tex  scores.tex
Dokumentation/lib/: research.bib
Dokumentation/slides/: cimarron-presi.tex
Dokumentation/slides/images/: sd-mini.tex
src/: CMakeLists.txt  cimarron-main-opencvdemo.cc  cimarron-main.cc  cimarron-main.cpp  opencvdemo
src/analysis/: analysis.h  camShiftTracker.h  localMotionEstimation.h  movementAggregation.h  movementAnalysis.h  smoothGDD.h
src/helper/: filesystem.h  ownMath.h  printer.h  stream.h  typeIdentifier.h  types.h
src/postprocessing/: reframing.h  video_output.h
src/preprocessing/: extractFrames.h  preprocessing.h
src/stabilziation/: stabilziation.h  transformFrames.h
src/test/: symbols.hh
testvideos/: testwebcam-angle.webm  testwebcam-shaky.webm  testwebcam.webm
